Fix mathjax horizontal overflow

--- a/themes/jip/assets/scss/_article.scss
+++ b/themes/jip/assets/scss/_article.scss
@@ -137,10 +137,8 @@ article {
     }
 
     div.mathjax {
-      @media screen and (max-width: 600px) {
-        display: block;
-        overflow-x: auto;
-      }
+      display: block;
+      overflow-x: auto;
     }
 
     .MathJax_Display {
